improve flash styling and positoning

--- a/static/css/background-patterns.css
+++ b/static/css/background-patterns.css
@@ -12,3 +12,8 @@
     background-color: #dce775;
     background-image: url("../images/food.png");
 }
+
+.flash-bg {
+    background-color: #212121;
+    background-image: url("../images/food.png");
+}
