--- a/templates/flashes.html
+++ b/templates/flashes.html
@@ -4,8 +4,8 @@
         {% if messages %}
         {% for message in messages %}
         <div class="row">
-            <div class="flashes">
-                <h5 class="black-text center-align">{{ message }}</h5>
+            <div class="flashes flash-bg">
+                <h5 class="center-align">{{ message }}</h5>
             </div>
         </div>
         {% endfor %}
