--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,7 @@
         <nav class="header-bg">
             <div class="header-opacity">
                 <div class="nav-wrapper">
-                    <a href="#!" class="brand-logo left amber-text">Munchkins.</a>
+                    <a href="#!" class="brand-logo left amber-text">Little Munchkins.</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                     <ul class="right hide-on-med-and-down">
                         {% if session.user %}
