--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,30 +1,24 @@
 {% block footer %}
 <footer class="page-footer header-bg">
         <div class="header-opacity">
-            <div class="container">
+            <div class="container amber-text">
                 <div class="row">
-                    <div class="col l6 s12">
-                        <h5 class="white-text">Footer Content</h5>
-                        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer
-                            content.
-                        </p>
-                    </div>
-                    <div class="col l4 offset-l2 s12">
-                        <h5 class="white-text">Links</h5>
-                        <ul>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                        </ul>
+                    <div class="col l8 offset-l2 s12 center-align amber-text">
+                        <div class="tooltip">
+                            <span class="tooltiptext">For demo purposes</span>
+                            <a class="mailto amber-text disabled" href="mailto:info@little-munchkins.com">info@little-munchkins.com</a>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="footer-copyright">
                 <div class="container">
-                    © 2021 Copyright Text
-                    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                    <div class="row">
+                        <div class="col l8 offset-l2 s12 center-align amber-text">
+                            © 2021 Copyright Little Munchkins
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
