--- a/templates/recipe_builder.html
+++ b/templates/recipe_builder.html
@@ -108,15 +108,13 @@
                 <!-------submit btn------->
                 <div class="col s12 m3 offset-m3">    
                     <div class="input-field col s12 center">
-                        <button class="btn waves-effect waves-light orange" type="submit" id="submit-builder"
-                            name="submit" formaction="/addrecipe">Submit</button>
+                        <button class="btn waves-effect waves-light orange" type="submit" id="submit-builder" name="submit" formaction="/addrecipe">Submit</button>
                     </div>
                 </div>
                 <!-------reset btn------->
                 <div class="col s12 m3">
                     <div class="input-field col s12 center">
-                        <button class="btn waves-effect waves-light red" type="reset" id="reset-builder"
-                            name="reset">Reset</button>
+                        <button class="btn waves-effect waves-light red" type="reset" id="reset-builder" name="reset" onclick="return confirm('Are you sure you want to cancel changes?');">Reset</button>
                     </div>
                 </div>
             </div>
