functionality to refresh profile when favourite removed

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends "base_overlay.html" %}
 {% block content %}
-<div class="profile-wrapper">
+<div class="profile-wrapper" id="profile-wrap">
     <div class="row">
         <div class="col s12 m4" id="profile">
             <div class="card-panel">
