--- a/templates/recipe_builder.html
+++ b/templates/recipe_builder.html
@@ -114,7 +114,7 @@
                 <!-------reset btn------->
                 <div class="col s12 m3">
                     <div class="input-field col s12 center">
-                        <button class="btn waves-effect waves-light red" type="reset" id="reset-builder" name="reset" onclick="return confirm('Are you sure you want to cancel changes?');">Reset</button>
+                        <button class="btn waves-effect waves-light red" type="reset" id="reset-builder" name="reset" onclick="clearOnReset()">Reset</button>
                     </div>
                 </div>
             </div>
@@ -127,6 +127,12 @@
     var loadPreviewFile = function(event){ 
         $('#builder-preview-img').attr("src", URL.createObjectURL(event.target.files[0]));
     };
+
+    function clearOnReset(){
+        if(confirm('Are you sure you want to cancel changes?')){
+            $('#builder-preview-img').attr("src", "");
+        }
+    }
 </script>
 
 {% endblock %}
