--- a/templates/register.html
+++ b/templates/register.html
@@ -19,7 +19,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <input id="password" name="password" type="password" class="validate" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
-                        <label for="password">Password</label>
+                        <label for="password">Password (At least: 1 uppercase, 1 lowercase, 1 number)</label>
                     </div>
                 </div>
                 <!-------password confirm------->
