restructured profile endpoint and html template to improve UX

--- a/templates/500_generic.html
+++ b/templates/500_generic.html
@@ -1,5 +1,5 @@
 {% extends "base_overlay.html" %}
 {% block content %}
-    <p>An error occurred</p>
+    <p><strong>An error occurred!</strong></p>
     <p>{{e}}</p>
 {% endblock %}
