--- a/templates/recipe_builder.html
+++ b/templates/recipe_builder.html
@@ -125,6 +125,12 @@
 
 <script>
     var loadPreviewFile = function(event){ 
+        if(event.target.files[0].size > (1024 * 1024)){
+            $('input[name="recipe_img"]').val('')
+            $('input[name="recipe_img_name"]').val('');
+            alert('file is too large, please select another');
+            return;
+        }
         $('#builder-preview-img').attr("src", URL.createObjectURL(event.target.files[0]));
     };
 
