--- a/templates/recipe_editor.html
+++ b/templates/recipe_editor.html
@@ -191,7 +191,9 @@
         mutations.forEach(function(mutation) {
             if (mutation.type == "attributes") {
                 var value =  document.getElementById("file-path").getAttribute("value");
-                document.getElementById("builder-preview-img").setAttribute("src", "../static/images/public/" + value);
+                if(value != ""){
+                    document.getElementById("builder-preview-img").setAttribute("src", "../static/images/public/" + value);
+                }
             }
         });
     });
@@ -201,7 +203,6 @@
         attributeFilter: ['value']
     });
 
-
     document
         .getElementById("file-path")
         .setAttribute("value", document
@@ -209,8 +210,13 @@
             .getAttribute("value").replace("$","")
     );
 
-
     var loadPreviewFile = function(event){ 
+        if(event.target.files[0].size > (1024 * 1024)){
+            $('input[name="recipe_img"]').val('')
+            $('input[name="recipe_img_name"]').val('');
+            alert('file is too large, please select another');
+            return;
+        }
         $('#builder-preview-img').attr("src", URL.createObjectURL(event.target.files[0]));
     };
 
