resolve bug with search results layout

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -294,6 +294,10 @@ a.disabled {
     padding: 5px 3px;
 }
 
+.prep-time .col .row{
+    margin: 0;
+}
+
 /* MEDIA QUERIES */
 @media only screen and (max-height: 500px) {
     .opacity-layer {
