--- a/templates/search.html
+++ b/templates/search.html
@@ -13,17 +13,27 @@
         <section class="search-results">
             <div class="container">
                 <div class="card-panel">
-                {% if results|length %}
-                <div class="row">
-                {% for recipecard in results %}
-                        <div class="col s12 m6">
-                            {% include "recipe_card.html" %}
-                        </div>
-                    {% endfor %}
-                </div>
-                {% else %}
-                    <p>no results found</p>
-                {% endif %}
+                        {% if results|length %}
+                            {% for recipecard in results %}
+                                {% if loop.index is not divisibleby 2 %}
+                                        <div class="row">
+                                            <div class="col s12 m6">
+                                                {% include "recipe_card.html" %}
+                                            </div>
+                                        {% if loop.index == results|length %}
+                                        </div>
+                                        {% endif %}
+                                    {% else %}
+                                        <div class="col s12 m6">
+                                        {% include "recipe_card.html" %}
+                                        </div>
+                                    </div>
+                                {% endif %}
+
+                            {% endfor %}
+                        {% else %}
+                            <p>no results found</p>
+                        {% endif %}
                 </div>
             </div>
         </section>
