--- a/templates/recipe_editor.html
+++ b/templates/recipe_editor.html
@@ -100,7 +100,7 @@
                 <div class="col s12">
                     <label>Ingredients</label>
                     <div class="container ingredients">
-                        {% if (recipecard['ingredients'] is defined) and (recipecard['ingredients'] is not none) %}
+                        {% if (recipecard['ingredients'] is defined) and (recipecard['ingredients']|length != 0) %}
                             {% for ingredient in recipecard['ingredients'].items() %}
                                 <div class="row ingredient cyan lighten-4" id="ingredient-{{ loop.index }}">
                                     <div class="input-field col m8">
@@ -132,7 +132,7 @@
                 <div class="col s12">
                     <label>Method</label>
                     <div class="container steps" id="editor-steps">
-                        {% if (recipecard['steps'] is defined) and (recipecard['steps'] is not none) %}
+                        {% if (recipecard['steps'] is defined) and (recipecard['steps']|length != 0) %}
                             {% for step in recipecard['steps'].items() %}
                                 <div class="row step cyan lighten-4" id="step-{{ loop.index}}">
                                     <div class="input-field col m2">
@@ -154,7 +154,7 @@
                                     </div>
                                     <div class="input-field col m2">
                                         <input type="text" id="step-{{ loop.index}}-time" name="step-{{ loop.index}}-time" minlength="1" maxlength="3"
-                                            class="validate" pattern="^[0-9.]{1,3}$" value="{{step[1].time}}" required />
+                                            class="validate" pattern="^[0-9]{1,3}$" value="{{step[1].time}}" required />
                                         <label for="step-{{ loop.index}}-time">Time (mins)</label>
                                     </div>
                                     <div class="input-field col m1">
