remove unnecessary ids from nav links

--- a/templates/header.html
+++ b/templates/header.html
@@ -9,8 +9,8 @@
                         {% if session.user %}
                         <li><a href="{{ url_for('profile', username=session['user'])}}" class="amber-text">My
                                 Profile</a></li>
-                        <li><a href="{{ url_for('search', id='0')}}" class="amber-text">Search</a></li>
-                        <li><a href="{{ url_for('recipebuilder', id='0')}}" class="amber-text">My Recipe Builder</a></li>
+                        <li><a href="{{ url_for('search')}}" class="amber-text">Search</a></li>
+                        <li><a href="{{ url_for('recipebuilder')}}" class="amber-text">My Recipe Builder</a></li>
                         <li><a href="{{ url_for('logout')}}" class="amber-text">Log Out</a></li>
                         {% else %}
                         <li><a href="{{ url_for('home')}}" class="amber-text">Home</a></li>
@@ -25,8 +25,8 @@
         <ul class="sidenav" id="mobile-demo">
             {% if session.user %}
             <li><a href="{{ url_for('profile', username=session['user'])}}">My Profile</a></li>
-            <li><a href="{{ url_for('search', id='0')}}">Search</a></li>
-            <li><a href="{{ url_for('recipebuilder', id='0')}}">My Recipe Builder</a></li>
+            <li><a href="{{ url_for('search')}}">Search</a></li>
+            <li><a href="{{ url_for('recipebuilder')}}">My Recipe Builder</a></li>
             <li><a href="{{ url_for('logout')}}">Log Out</a></li>
             {% else %}
             <li><a href="{{ url_for('home')}}">Home</a></li>
