remove pattern validation from login password

--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
                 <!-------password------->
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="password" name="password" type="password" class="validate" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
+                        <input id="password" name="password" type="password" required>
                         <label for="password">Password</label>
                     </div>
                 </div>
