--- a/templates/recipe_editor.html
+++ b/templates/recipe_editor.html
@@ -55,6 +55,7 @@
                         <div class="col s12">
                             <div class="builder-img-wrapper">
                                 <img id="builder-preview-img" />
+                                <a class="clear-preview" id="clear-preview" style="display: none;" onclick="clearImage()"><i class="material-icons">close</i></a>
                             </div>
                         </div>
                         <div class="col s12">
@@ -193,6 +194,7 @@
                 var value =  document.getElementById("file-path").getAttribute("value");
                 if(value != ""){
                     document.getElementById("builder-preview-img").setAttribute("src", "../static/images/public/" + value);
+                    document.getElementById('clear-preview').style.display = "block";
                 }
             }
         });
@@ -218,6 +220,14 @@
             return;
         }
         $('#builder-preview-img').attr("src", URL.createObjectURL(event.target.files[0]));
+        $('.clear-preview').show();
+    };
+
+    function clearImage(){
+        $('input[name="recipe_img"]').val('')
+        $('input[name="recipe_img_name"]').val('');
+        $('#builder-preview-img').attr("src", "").css("display", "none");
+        $('.clear-preview').hide();
     };
 
 </script>
