--- a/templates/recipe_builder.html
+++ b/templates/recipe_builder.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="input-field col s12 center">
                     <button class="btn waves-effect waves-light cyan" type="submit" id="preview-recipe" name="preview"
-                        formaction="/previewrecipe">Preview Recipe</button>
+                        formaction="/recipe/preview">Preview Recipe</button>
                 </div>
             </div>
             <!-------title------->
@@ -109,7 +109,7 @@
                 <!-------submit btn------->
                 <div class="col s12 m3 offset-m3">    
                     <div class="input-field col s12 center">
-                        <button class="btn waves-effect waves-light orange" type="submit" id="submit-builder" name="submit" formaction="/addrecipe">Submit</button>
+                        <button class="btn waves-effect waves-light orange" type="submit" id="submit-builder" name="submit" formaction="/recipe/add">Submit</button>
                     </div>
                 </div>
                 <!-------reset btn------->
