--- a/templates/recipe_editor.html
+++ b/templates/recipe_editor.html
@@ -11,15 +11,15 @@
             <div class="row">
                 <div class="input-field col s12 center">
                     <button class="btn waves-effect waves-light cyan" type="submit" id="preview-recipe" name="preview"
-                        formaction="/previewrecipe">Preview Recipe</button>
+                        formaction="/recipe/preview">Preview Recipe</button>
                 </div>
                 <div class="input-field col s12 center">
                     <button class="btn waves-effect waves-light red" type="submit" id="delete-recipe" name="delete"
-                        formaction="/deleterecipe" onclick="return confirm('Are you sure you want to delete?');">Delete Recipe</button>
+                        formaction="/recipe/delete" onclick="return confirm('Are you sure you want to delete?');">Delete Recipe</button>
                 </div>
                 <div class="input-field col s12 center">
                     <button class="btn waves-effect waves-light green" type="submit" id="cancel-changes" name="cancel"
-                        formaction="/canceleditrecipe" onclick="return confirm('Are you sure you want to cancel changes?');">Cancel Changes</button>
+                        formaction="/recipe/edit/cancel" onclick="return confirm('Are you sure you want to cancel changes?');">Cancel Changes</button>
                 </div>
             </div>
             <!-------recipe id placeholer------->
@@ -175,7 +175,7 @@
                 <div class="col s12">
                     <div class="input-field col s12 center">
                         <button class="btn waves-effect waves-light orange" type="submit" id="submit-builder"
-                            name="submit" formaction="/updaterecipe">Update</button>
+                            name="submit" formaction="/recipe/update">Update</button>
                     </div>
                 </div>
             </div>
