few fixes from UAT

--- a/templates/recipe_builder.html
+++ b/templates/recipe_builder.html
@@ -109,13 +109,13 @@
                 <!-------submit btn------->
                 <div class="col s12 m3 offset-m3">    
                     <div class="input-field col s12 center">
-                        <button class="btn waves-effect waves-light orange" type="submit" id="submit-builder" name="submit" formaction="/recipe/add">Submit</button>
+                        <button class="btn waves-effect waves-light orange submit-builder" type="submit" id="submit-builder" name="submit" formaction="/recipe/add">Submit</button>
                     </div>
                 </div>
                 <!-------reset btn------->
                 <div class="col s12 m3">
                     <div class="input-field col s12 center">
-                        <button class="btn waves-effect waves-light red" type="reset" id="reset-builder" name="reset" onclick="clearOnReset()">Reset</button>
+                        <button class="btn waves-effect waves-light red reset-builder" type="reset" id="reset-builder" name="reset" onclick="clearOnReset()">Reset</button>
                     </div>
                 </div>
             </div>
