--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
                         {% if session.user %}
                         <li><a href="{{ url_for('profile', username=session['user'])}}" class="amber-text">My
                                 Profile</a></li>
-                        <li><a href="{{ url_for('search')}}" class="amber-text">Search</a></li>
+                        <li><a href="{{ url_for('recipesearch')}}" class="amber-text">Search</a></li>
                         <li><a href="{{ url_for('recipebuilder')}}" class="amber-text">My Recipe Builder</a></li>
                         <li><a href="{{ url_for('logout')}}" class="amber-text">Log Out</a></li>
                         {% else %}
@@ -25,7 +25,7 @@
         <ul class="sidenav" id="mobile-demo">
             {% if session.user %}
             <li><a href="{{ url_for('profile', username=session['user'])}}">My Profile</a></li>
-            <li><a href="{{ url_for('search')}}">Search</a></li>
+            <li><a href="{{ url_for('recipesearch')}}">Search</a></li>
             <li><a href="{{ url_for('recipebuilder')}}">My Recipe Builder</a></li>
             <li><a href="{{ url_for('logout')}}">Log Out</a></li>
             {% else %}
