--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,6 +2,7 @@
 <footer class="page-footer header-bg">
         <div class="header-opacity">
             <div class="container amber-text">
+                <!-- email contact -->
                 <div class="row">
                     <div class="col l8 offset-l2 s12 center-align amber-text">
                         <div class="tooltip">
@@ -14,6 +15,7 @@
 
             <div class="footer-copyright">
                 <div class="container">
+                    <!-- copyright info -->
                     <div class="row">
                         <div class="col l8 offset-l2 s12 center-align amber-text">
                             © 2021 Copyright Little Munchkins
