--- a/templates/recipe_builder.html
+++ b/templates/recipe_builder.html
@@ -124,6 +124,7 @@
     </form>
 </div>
 
+<!-- local scripts-->
 <script>
     var loadPreviewFile = function(event){ 
         if(event.target.files[0].size > (1024 * 1024)){
