--- a/templates/recipe_editor.html
+++ b/templates/recipe_editor.html
@@ -1,7 +1,7 @@
 {% extends "base_overlay.html" %}
 {% block content %}
 <div class="container">
-    <form method="POST" enctype="multipart/form-data" id="builder-form">
+    <form method="POST" enctype="multipart/form-data" id="editor-form">
         <div class="card-panel">
             <!-- header -->
             <div class="row form-header">
@@ -184,6 +184,7 @@
     </form>
 </div>
 
+<!-- local scripts-->
 <script>
     var MutationObserver = window.MutationObserver;
     var slide = document.getElementById('file-path');
