--- a/templates/search.html
+++ b/templates/search.html
@@ -2,6 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% block content %}
     <div class="search-wrapper">
+        <!-- search bar-->
         <section class="search-form">
             <div class="container">
                 <div class="card-panel">
@@ -10,6 +11,7 @@
             </div>
         </section>
 
+        <!-- search results-->
         <section class="search-results">
             <div class="container">
                 <div class="card-panel">
