--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap');
 
+/* core elements */
 body {
   display: flex;
   flex-direction: column;
@@ -23,6 +24,19 @@ body {
   font-size: 20px;
 }
 
+main {
+  flex: 1 0 auto;
+}
+
+.row {
+  margin: 0;
+}
+
+.form-header {
+    text-align: center;
+}
+
+/* header */
 .header-opacity {
     background-color: rgba(3, 0, 0, 0.6);
     height:100%;
@@ -33,22 +47,17 @@ body {
     font-weight: 900;
 }
 
+
+/* footer */
 .page-footer{
     padding-top: 0px;
 }
 
-main {
-  flex: 1 0 auto;
+.page-footer .header-opacity {
+    padding-top: 50px;
 }
 
-.register-wrapper {
-  margin: 20px;
-}
-
-.row {
-  margin: 0;
-}
-
+/* home */
 .modal-overlay {
   display: none;
 }
@@ -110,6 +119,12 @@ main {
     opacity: 0; 
 }
 
+/* register */
+.register-wrapper {
+  margin: 20px;
+}
+
+/* recipe card */
 .card {
     padding: 25px;
     margin:0;
@@ -144,6 +159,21 @@ main {
     font-size: 12px;
 }
 
+.prep-time {
+    font-size: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.tabs .tab a {
+    padding: 5px 3px;
+}
+
+.prep-time .col .row{
+    margin: 0;
+}
+
+/* builder */
 .steps, .ingredients {
     width: 90%;
 }
@@ -191,24 +221,10 @@ main {
     max-height: 200px;
 }
 
-.form-header {
-    text-align: center;
-}
-
 #recipe-preview {
     height: 80vh;
     margin-top: 10px;
     margin-left: 10px;
-}
-
-.prep-time {
-    font-size: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.tabs .tab a {
-    padding: 0 3px;
 }
 
 #user-edit{
@@ -241,10 +257,31 @@ main {
     margin-bottom: 25px;
 }
 
+.clear-preview {
+    position: absolute;
+    top: 10px;
+    left: 160px;
+    color: #000;
+}
+
+.clear-preview i:hover {
+    cursor:pointer;
+}
+
+.file-field .btn {
+    width: 120px;
+}
+
+a.disabled {
+    pointer-events: none;
+}
+
+/* search */
 .search-results .recipe-card {
     margin-bottom: 25px;
 }
 
+/* tooltip*/
 .tooltip {
   position: relative;
   display: inline-block;
@@ -280,37 +317,6 @@ main {
 .tooltip:hover .tooltiptext {
   visibility: visible;
   opacity: 1;
-}
-
-.page-footer .header-opacity {
-    padding-top: 50px;
-}
-
-a.disabled {
-    pointer-events: none;
-}
-
-.tabs .tab a {
-    padding: 5px 3px;
-}
-
-.prep-time .col .row{
-    margin: 0;
-}
-
-.clear-preview {
-    position: absolute;
-    top: 10px;
-    left: 160px;
-    color: #000;
-}
-
-.clear-preview i:hover {
-    cursor:pointer;
-}
-
-.file-field .btn {
-    width: 120px;
 }
 
 /* MEDIA QUERIES */
