--- a/templates/recipe_editor.html
+++ b/templates/recipe_editor.html
@@ -60,7 +60,7 @@
                         </div>
                         <div class="col s12">
                             <div class="file-path-wrapper">
-                                <input class="file-path validate" id="file-path" type="text" value="{{ recipecard['recipe_img'] }}" name="recipe_img_name">
+                                <input class="file-path validate" id="file-path" type="text" value="${{ recipecard['recipe_img'] }}" name="recipe_img_name">
                             </div>
                         </div>
                     </div>
@@ -194,7 +194,7 @@
             if (mutation.type == "attributes") {
                 var value =  document.getElementById("file-path").getAttribute("value");
                 if(value != ""){
-                    document.getElementById("builder-preview-img").setAttribute("src", "uploads/" + value);
+                    document.getElementById("builder-preview-img").setAttribute("src", "/uploads/" + value);
                     document.getElementById('clear-preview').style.display = "block";
                 }
             }
@@ -206,14 +206,11 @@
         attributeFilter: ['value']
     });
 
-    //document
-        //.getElementById("file-path")
-        //.setAttribute("value", document
-            //.getElementById("file-path")
-            //.getAttribute("value")
-    console.log(document
-    .getElementById("file-path")
-            .getAttribute("value"));
+    document
+        .getElementById("file-path")
+        .setAttribute("value", document
+            .getElementById("file-path")
+            .getAttribute("value").replace("$",""));
 
     var loadPreviewFile = function(event){ 
         if(event.target.files[0].size > (1024 * 1024)){
